src/objects/SBQQ__ConfigurationAttribute__c.object
<CustomObject>
    <customHelpPage>SBQQ__ConfigurationAttributeHelp</customHelpPage>
    <description>Product configuration attribute.</description>
    <fields>
        <fullName>CPQ_Config_Version__c</fullName>
        <label>CPQ Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AppliedImmediately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates changes to this configuration attribute should apply immediately.</description>
        <inlineHelpText>Select the checkbox to immediately apply changes to this option. Use sparingly to avoid slow user experience.</inlineHelpText>
        <label>Apply Immediately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ApplyToProductOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Apply configuration attribute selection to product options.</description>
        <inlineHelpText>Select the checkbox to apply configuration attribute selection to product options.</inlineHelpText>
        <label>Apply To Product Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AutoSelect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set the value of this attribute when adding a product from a Dynamic Feature using the value of the added product&apos;s matching field.</description>
        <inlineHelpText>Set the value of this attribute when adding a product from a Dynamic Feature using the value of the added product&apos;s matching field.</inlineHelpText>
        <label>Auto-Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ColumnOrder__c</fullName>
        <description>Columns are comprised of a picklist (of 1, 2, or 3) for each Configuration Attribute. A maximum of 3 columns is allowed.</description>
        <inlineHelpText>Columns are comprised of a picklist (of 1, 2, or 3) for each Configuration Attribute. A maximum of 3 columns is allowed.</inlineHelpText>
        <label>Column Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultField__c</fullName>
        <description>API of the target field on the default object for the default value of the attribute.</description>
        <inlineHelpText>API of the target field on the default object for the default value of the attribute.</inlineHelpText>
        <label>Default Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultObject__c</fullName>
        <description>Target object for the default value of the attribute.</description>
        <inlineHelpText>Target object for the default value of the attribute.</inlineHelpText>
        <label>Default Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote__c</fullName>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>QuoteLineGroup__c</fullName>
                    <label>Quote Line Group</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>This is the order in which the Configuration Attributes will be displayed.</description>
        <inlineHelpText>If there is no display order associated with a Configuration Attribute, order is determined by Related Content name.</inlineHelpText>
        <label>Row Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feature in which this attribute should be rendered.</description>
        <inlineHelpText>Specify the feature in which this attribute should be entered.</inlineHelpText>
        <label>Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__Product__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductFeature__c.SBQQ__ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductFeature__c</referenceTo>
        <relationshipLabel>Configuration Attributes</relationshipLabel>
        <relationshipName>ConfigurationAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Global__c</fullName>
        <description>Indicates if this attribute has a global target field.</description>
        <formula>CONTAINS(TEXT(SBQQ__TargetField__c), &apos;.&apos;)</formula>
        <inlineHelpText>Indicates if this attribute has a global target field.</inlineHelpText>
        <label>Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__HiddenValues__c</fullName>
        <description>Values from the backing picklist field that should be hidden on this bundle.</description>
        <inlineHelpText>Enter values from the corresponding picklist field on Product Option object that you want to be hidden on this bundle.</inlineHelpText>
        <label>Hidden Values</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If flagged as hidden, the Configuration Attribute will not appear on the Product Configurator Page.</description>
        <inlineHelpText>If flagged as hidden, the Configuration Attribute will not appear on the Product Configurator Page.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Position__c</fullName>
        <description>Position of the attribute.</description>
        <inlineHelpText>Specify position of this attribute. Top renders above the options. Bottom renders below.</inlineHelpText>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top</fullName>
                    <default>true</default>
                    <label>Top</label>
                </value>
                <value>
                    <fullName>Bottom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product being configured.</description>
        <inlineHelpText>Specify product on which you are creating the attribute.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Configuration Attributes</relationshipLabel>
        <relationshipName>ConfigurationAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the attributes requires a value.</description>
        <inlineHelpText>Specify whether this attribute requires a value.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShownValues__c</fullName>
        <description>Values from the backing picklist field that should be shown on this bundle.</description>
        <inlineHelpText>Enter values from the corresponding picklist field on Product Option object that you want to be shown on this bundle.</inlineHelpText>
        <label>Shown Values</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetField__c</fullName>
        <description>Field on the Product Option that sources remaining metadata and holds the value.</description>
        <inlineHelpText>Specify field on Product Option that will hold this attribute&apos;s value.</inlineHelpText>
        <label>Target Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle_Code__c</fullName>
                </value>
                <value>
                    <fullName>Car_Parking_Inventory__c</fullName>
                </value>
                <value>
                    <fullName>Date__c</fullName>
                </value>
                <value>
                    <fullName>Deposit_Payment_Total__c</fullName>
                </value>
                <value>
                    <fullName>Deposit_Q_L__c</fullName>
                </value>
                <value>
                    <fullName>Discount_Amount__c</fullName>
                </value>
                <value>
                    <fullName>Discount_Amount_Total__c</fullName>
                </value>
                <value>
                    <fullName>Discount_Percent__c</fullName>
                </value>
                <value>
                    <fullName>Discount (%)</fullName>
                </value>
                <value>
                    <fullName>Discount (Amt)</fullName>
                </value>
                <value>
                    <fullName>Headline_Item_Subscription_Term__c</fullName>
                </value>
                <value>
                    <fullName>Indicative_Start_Date__c</fullName>
                </value>
                <value>
                    <fullName>Inventory__c</fullName>
                </value>
                <value>
                    <fullName>Lease_Start_Date__c</fullName>
                </value>
                <value>
                    <fullName>Licence_Start_Date__c</fullName>
                </value>
                <value>
                    <fullName>Monthly_Cost__c</fullName>
                </value>
                <value>
                    <fullName>Net_Subtotal__c</fullName>
                </value>
                <value>
                    <fullName>Net_Total__c</fullName>
                </value>
                <value>
                    <fullName>Product_for_Filter__c</fullName>
                </value>
                <value>
                    <fullName>Property__c</fullName>
                </value>
                <value>
                    <fullName>Property_for_Filter__c</fullName>
                </value>
                <value>
                    <fullName>Quanta__c</fullName>
                </value>
                <value>
                    <fullName>Quote_Record_Type__c</fullName>
                </value>
                <value>
                    <fullName>Quote_Type__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Quantity__c</fullName>
                </value>
                <value>
                    <fullName>Start_Date__c</fullName>
                </value>
                <value>
                    <fullName>Status__c</fullName>
                </value>
                <value>
                    <fullName>Suite_Inventory__c</fullName>
                </value>
                <value>
                    <fullName>Term__c</fullName>
                </value>
                <value>
                    <fullName>Tolerance_State__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Configuration Attribute</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__TargetField__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SBQQ__ConfigurationAttributes</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>SBQQ__Product__c</columns>
        <columns>SBQQ__TargetField__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SBQQ__ConfigurationAttribute__c.SBQQ__Configuration_Attribute</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Configuration Attributes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SBQQ__GlobalAttributes</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__TargetField__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SBQQ__ConfigurationAttribute__c.SBQQ__Global_Attribute</value>
        </filters>
        <label>Global Attributes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Attributes</pluralLabel>
    <recordTypes>
        <fullName>SBQQ__Configuration_Attribute</fullName>
        <active>true</active>
        <description>Configuration Attribute associated to a product</description>
        <label>Configuration Attribute</label>
    </recordTypes>
    <recordTypes>
        <fullName>SBQQ__Global_Attribute</fullName>
        <active>true</active>
        <description>Definition of an Attribute Item</description>
        <label>Global Attribute</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Column_Order_is_required</fullName>
        <active>true</active>
        <description>Column Order is required</description>
        <errorConditionFormula>if (Text( SBQQ__ColumnOrder__c ) == &apos;&apos;, true, false)</errorConditionFormula>
        <errorMessage>Column Order is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Product_is_required_if_not_global</fullName>
        <active>false</active>
        <description>Product is required (not implemented; override existing validation rule behavior for existing orgs</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>Product is required.</errorMessage>
    </validationRules>
</CustomObject>